<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">长大校园通</string>
    <string name="hello_tip">长大在线/YUOL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">查询</string>
    <string name="into_app">开始使用</string>
    <string name="net_error_tip">当前网络不可用，请检查你的网络设置</string>
    <string name="tabbar_item1">首页</string>
    <string name="tabbar_item2">资讯</string>
    <string name="tabbar_item3">社区</string>
    <string name="tabbar_item4">自己</string>
    <string name="tabbar_item5">更多</string>
    <string name="comment_1">评论</string>
    <string name="copyright">copyright © 2015 长大在线. All Right Reserved</string>
    <string name="day">天</string>
    <string name="continue_last_search">继续上次查询</string>
    <string name="search_my_score">查询我的成绩</string>
    <string name="my_library_info">我的借书信息</string>
    <string name="login_library">登录图书馆</string>
    <string name="library_login_id">请输入你的学号或者借书证号</string>
    <string name="library_login_pwd">请输入图书馆密码</string>
    <string name="library_tip">如果你还没登录过图书馆或者没有设置过图书馆密码，可以不用输入密码直接登录</string>
    <string name="renew">续借</string>
    <string name="cet_name">请输入你的名字</string>
    <string name="cet_zuz">请输入四六级准考证号</string>
    <string name="cet_search_id">查询准考证号</string>
    <string name="term">学期</string>
    <string name="grade">年级</string>
    <string name="classname">班级</string>
    <string name="please_select_class">请选择你的专业班级</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="add">添加</string>
    <string name="send">发送</string>
    <string name="response">回复</string>
    <string name="delete">删除</string>

    
    <string name="current_schedule">当前课表</string>
    <string name="title_activity_home">长大新闻</string>


    <!-- 花椒问答 -->
    <string name="ask_new">最新问题</string>
    <string name="ask_wait">等待回复</string>
    <string name="ask_my">我的问题</string>
    <string name="ask_phb">排行榜</string>
    <string name="ask_input_tip">说点什么吧&#8230;</string>
    <string name="all_ranking">总排名</string>
    <string name="month_ranking">当月排名</string>
    <string name="ranking_score">积分</string>

    <!-- 自定义组件Xlist -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- 登录注册 -->
    <string name="login">登录</string>
    <string name="register">快速注册</string>
    <string name="register_">注册</string>
    <string name="input_stuid">请输入学号</string>
    <string name="input_password">密码：</string>
    <string name="input_verify">请输入验证码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="input_register_verify">验证码</string>
    <string name="input_email">用户名：</string>
    <string name="input_username">用户名</string>
    <string name="input_nickname">昵称</string>
    <string name="select_sex">请选择你的性别</string>
    <string name="bind_stuid">输入学号进行绑定</string>
    <string name="next_step">下一步</string>
    <string name="reg_step1_tip">用户名和性别登录后可以修改</string>
    <string name="reg_step2_tip">如果您绑定学号可以享受更多更便捷的服务,如果没学号或者不绑定可以直接注册</string>
    <string name="reg_step3_tip">账号确定后将不可以修改</string>

    <!-- 资料共享 -->
    <string name="download">下载</string>
    <string name="upload">上传</string>
    <string name="select_sharing_file">请选择你要共享的文件</string>

    <!-- 倒计时 -->
    <string name="title">标题:</string>
    <string name="date">日期:</string>
    <string name="time">时间:</string>
    <string name="address">地点:</string>

    <!-- 修改个人信息 -->
    <string name="user_bind_stuid">绑定学号</string>
    <string name="no_bind_stuid">未绑定</string>
    <string name="user">账号</string>
    <string name="nickname">昵称</string>
    <string name="stuid">学号</string>
    <string name="username">邮箱</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="qq">电话</string>
    <string name="change_password">修改密码</string>
    <string name="college">学院</string>
    <string name="head">头像</string>

    <!-- 设置 -->
    <string name="check_new_version">检查新版本</string>
    <string name="about">关于长大校园通</string>
    <string name="exit_login">退出登录</string>
    <string name="suggest">反馈建议</string>
    <string name="receive_push_message">接收推送消息</string>
    <string name="twog_load_img">2G/3G下自动加载图片</string>
    <string name="clear_cache">清除缓存</string>
    <string name="zerom">0M</string>
    <string name="auto_test_update">自动检测更新</string>

    <!-- 关于 -->
    <string name="about_info">校园通交流群：397838258</string>


    <!-- 新闻 -->
    <string name="net_sorry_tip">咦，网络好像出故障了~</string>

    <string name="title_activity_notice">Notice</string>

    <string name="tab_index">动态</string>
    <string name="tab_news">新闻</string>
    <string name="title_activity_yunews_detail">YUNewsDetail</string>
    <string name="id_1">准考证号</string>
    <string name="id_2">准考证号：</string>
    <string name="hint_1">请输入15位准考证号&#160;&#160;</string>
    <string name="hint_2">请输入姓名的前3个字</string>
    <string name="name_1">姓名</string>
    <string name="name_2">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;姓名：</string>
    <string name="name_3">姓名：</string>
    <string name="query">查询</string>
    <string name="school">学校：</string>
    <string name="type">考试类别：</string>
    <string name="sum_1">&#160;您的成绩总分：</string>
    <string name="sum_2">总分：</string>
    <string name="hear">听力：</string>
    <string name="read">阅读：</string>
    <string name="synthesize">综合：</string>
    <string name="write">写作：</string>
    <string name="tips_3">无法找到对应的分数，请确认你输入的准考证号及姓名无误！</string>
    <string name="tips_4">姓名输入有误</string>
</resources>
