<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/login_edit_uid"
        style="@style/edit_text"
        android:layout_width="fill_parent"
        android:drawableLeft="@drawable/img_act_login_uid"
        android:drawablePadding="5dp"
        android:hint="@string/input_email"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/login_edit_pwd"
        style="@style/edit_text"
        android:layout_width="fill_parent"
        android:drawableLeft="@drawable/img_act_login_pwd"
        android:drawablePadding="5dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/defaut_btn_height"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_green_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_btn_reg"
        style="@style/button_blue"
        android:layout_marginTop="20dp"
        android:text="@string/register" />

</LinearLayout>