<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <com.yuol.smile.widgets.MyScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/weibo_bg"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 设置选项 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/setting_set_2gimg_layout"
                    style="@style/list_item" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/receive_push_message"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_butn_toggle"
                        android:checked="true"
                        android:text=""
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>

                <RelativeLayout
                    style="@style/list_item">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/twog_load_img"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_butn_toggle"
                        android:checked="true"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>

                <RelativeLayout
                     style="@style/list_item">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/auto_test_update"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_butn_toggle"
                        android:checked="true"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>

                <RelativeLayout
                     style="@style/list_item" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/clear_cache"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="40dp"
                        android:text="@string/zerom"
                        android:textColor="#8A8A8A" />
                </RelativeLayout>
            </LinearLayout>

            <!-- 检查新版本,反馈意见，关于 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/setting_check_version_layout"
                     style="@style/list_item" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/check_new_version"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/setting_check_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="40dp"
                        android:text="@string/download"
                        android:textColor="#8A8A8A" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/setting_check_suggest_layout"
                    style="@style/list_item" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/suggest"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/setting_check_about_layout"
                     style="@style/list_item">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/about"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </com.yuol.smile.widgets.MyScrollView>

</LinearLayout>