<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- 头像 -->

        <RelativeLayout
            android:id="@+id/user_info_head_layout"
            style="@style/list_item" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/head"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.yuol.smile.widgets.RoundedImageView
                android:id="@+id/user_info_head"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:contentDescription="@string/app_name"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/act_bg" />

        <RelativeLayout
            android:id="@+id/user_info_nick_layout"
            style="@style/list_item" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/nickname"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_info_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:textColor="#8A8A8A" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/act_bg" />

        <!-- 昵称 -->

        <RelativeLayout
            android:id="@+id/user_info_stuid_layout"
            style="@style/list_item" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/stuid"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_info_stuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:textColor="#8A8A8A" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/act_bg" />

        <Button
            android:id="@+id/setting_exit_login_btn"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/defaut_btn_height"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_green_button"
            android:text="@string/exit_login"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

</ScrollView>