<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/act_bg" />

            <RadioGroup
                android:id="@+id/main_radiogp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/tab_background_checked"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="2dp" >

                <RadioButton
                    android:id="@+id/radio_button1"
                    style="@style/tabbar_item"
                    android:drawableTop="@drawable/btn_tab1_selector"
                    android:tag="radio_button0"
                    android:text="@string/tabbar_item1" />

                <RadioButton
                    android:id="@+id/radio_button2"
                    style="@style/tabbar_item"
                    android:drawableTop="@drawable/btn_tab2_selector"
                    android:tag="radio_button0"
                    android:text="@string/tabbar_item2" />

                <RadioButton
                    android:id="@+id/radio_button3"
                    style="@style/tabbar_item"
                    android:drawableTop="@drawable/btn_tab4_selector"
                    android:tag="radio_button0"
                    android:text="@string/tabbar_item4" />
            </RadioGroup>
        </LinearLayout>
    </TabHost>
</RelativeLayout>